# drone

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: api-fuzz.yml  chaos-drill.yml  ci.yml  cloud-smoke.yml  codeql.yml  firmware-ci.yml  helm-ci.yml  load-smoke.yml  mavlink-ci.yml  mqtt-mtls-ci.yml  openapi.yml  pki-ci.yml  proto.yml  quality-gates.yml  release.yml  ros-build-ci.yml  sbom.yml  security.yml  sitl-integration.yml  stack-mtls-ci.yml  supply-chain.yml  video-probe.yml  web-ci.yml  web-e2e-stack.yml
cloud/: README.md
cloud/common/: pyproject.toml
cloud/common/drone_common/: __init__.py  audit.py  auth.py  migrate.py
cloud/common/tests/: test_auth_props.py
cloud/fleet_svc/: Dockerfile  README.md  openapi.json  requirements.txt
cloud/ingest/: Dockerfile  README.md  requirements.txt
cloud/log_svc/: Dockerfile  README.md  openapi.json  requirements.txt
cloud/mission_svc/: Dockerfile  README.md  openapi.json  requirements.txt
cloud/pki/: .gitignore  README.md  gen_crl.sh  init_ca.sh  issue_device.sh  issue_server.sh  openssl.cnf  revoke_device.sh  verify_pki.sh
docs/: 00-overview.md  01-requirements.md  02-verification-validation.md  03-safety-analysis.md
docs/10-hardware/: bom.md  communication.md  emc-rf.md  flight-controller.md  propulsion.md  sensors-and-payload.md  system-architecture.md
docs/20-software/: architecture.md  cloud-fleet.md  companion-computer.md  firmware.md  gcs-qgc-evaluation.md  ground-station.md  ota.md  security.md
docs/30-structure/: airframe-design.md  materials.md  payload-interface.md
docs/40-regulatory/: certification-roadmap.md
docs/50-project/: budget.md  manufacturing.md  operations-support.md  risk-register.md  roadmap.md  supply-chain.md  team.md
firmware/: Makefile  README.md
firmware/mavlink/: drone_sitl.xml
firmware/patches/: 0001-sitl-dialect-drone-sitl.patch  0002-mavlink-streams-drone-custom.patch  0003-romfs-airframe-sihsim-pa1.patch  README.md
firmware/tools/: apply_patches.sh  fetch_px4.sh  inject_dialect.sh  requirements-px4-build.txt  run_sitl_smoke.sh
gcs/: README.md
gcs/qgc-profiles/: README.md  VERSION.md
gcs/web-console/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  mock_oidc.py  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.stack.config.ts  vite.config.ts
hardware/: README.md
interfaces/: README.md
interfaces/mavlink/: README.md  check_dialect.py  drone_custom.xml
onboard/: README.md
onboard/mission_exec/: README.md  pyproject.toml  requirements.txt  ruff.toml
onboard/mission_exec/mission_exec/: __init__.py  executor.py  main.py  patterns.py  plan.py  translate.py
onboard/mission_exec/missions/: demo_square.json
onboard/mission_exec/tests/: conftest.py  test_executor.py  test_main.py  test_patterns.py  test_plan.py  test_translate.py
onboard/ros2_ws/src/bridge_smoke/: package.xml  setup.cfg  setup.py
onboard/ros2_ws/src/bridge_smoke/bridge_smoke/: listener.py
onboard/ros2_ws/src/obstacle_guard/: README.md  package.xml  setup.cfg  setup.py
onboard/ros2_ws/src/obstacle_guard/obstacle_guard/: node.py  safety.py
onboard/ros2_ws/src/obstacle_guard/tests/: conftest.py  test_safety.py
onboard/ros2_ws/src/precision_land/: README.md  package.xml  setup.cfg  setup.py
onboard/ros2_ws/src/precision_land/precision_land/: node.py  state_machine.py
onboard/ros2_ws/src/precision_land/tests/: conftest.py  test_state_machine.py
onboard/ros2_ws/src/px4_mqtt_bridge/: package.xml  setup.cfg  setup.py
onboard/ros2_ws/src/px4_mqtt_bridge/px4_mqtt_bridge/: bridge.py  codec.py
onboard/ros2_ws/src/px4_mqtt_bridge/tests/: conftest.py  test_codec.py
structure/: README.md
tools/: README.md  dispatch_mission.py  dispatch_ota.py  dump_openapi.py  e2e_demo.sh  gen_sbom.sh  publish_fake_payload.py  publish_fake_telemetry.py  requirements.txt  telemetry_monitor.py  ulog_powercut_test.sh  ulog_report.py
(+298 files in other folders)
