<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_smoke</name>
  <version>0.1.0</version>
  <description>PX4 uXRCE-DDS bridge 最小煙霧驗證(Phase 0 第二批 S8):
    訂 /fmu/out/vehicle_status 與 /fmu/out/vehicle_local_position,
    收滿 N 筆即 PASS,逾時 FAIL。</description>
  <maintainer email="x812033727@gmail.com">drone onboard</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
