<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>precision_land</name>
  <version>0.1.0</version>
  <description>視覺標靶精準降落 node(P1):訂標靶偏移 → 用已測 P0 降落狀態機算水平對準
    速度 + 下降速率 → 發布。只發速度 setpoint、絕不姿態級指令;標靶丟失→停降重試/逾時→ABORT。</description>
  <maintainer email="x812033727@gmail.com">drone onboard</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
